--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Cormorant+Upright:400,700|Source+Sans+Pro:400,700&display=swap');
-@import '../plugins/fontawesome/fontawesome.scss';
-@import '../plugins/fontawesome/fa-regular.scss';
-@import "../plugins/fontawesome/fa-brands.scss";
 @import '../plugins/bourbon/bourbon';
 @import '../plugins/base/base';
 @import '../plugins/neat/neat';
+/*@import '../plugins/fontawesome/fontawesome.scss';
+@import '../plugins/fontawesome/fa-regular.scss';
+@import '../plugins/fontawesome/fa-brands.scss';
+@import '../plugins/fontawesome/fa-solid.scss';*/
+
 
 /*! HTML5 Boilerplate v4.3.0 | MIT License | http://h5bp.com/ */
 
