--- a/scss/site/_structure.scss
+++ b/scss/site/_structure.scss
@@ -1,75 +1,162 @@
 
-.apff .page-content {
+%button {
+    background: $brandPrimary;
+    border-radius: 20px;
+    color: $white;
+    display: inline-block;
+    font-weight: 600;
+    padding: 12px 26px;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: all .3s ease-out;
+
+    .fa {
+        margin-left: 5px;
+    }
+
+    &:hover {
+        background: $black;
+        color: $white;
+    }
+
+    &.black {
+        background: $black;
+
+        .fa {
+            color: $brandPrimary;
+        }
+
+        &:hover {
+            background: $brandPrimary;
+
+            .fa {
+                color: $white;
+            }
+        }
+    }
+}
+
+.apff {
 	text-align: center;
 
-	header { 
-	  width: 100%;
-	  clear: both;
-	  background-color: white;
-	  position: relative;
-	}
+    header {
+        width: 100%;
+        clear: both;
+        background-color: white;
+        position: relative;
 
-	h1, h2, h3, h4 {
-		color: $brandPrimary;
-	}
+        .btn {
+            @extend %button;
+        }
+    }
 
-	h1 {
-		font-size: $h1-font-size;
-		font-weight: 600;
-		margin: 40px 0 20px 0;
-		line-height: $h1-line-height;
-	}
+    .ccm-panel-content {
+        text-align: left;
+    }
 
-	p {
-		color: $textColor;
-		line-height: 30px;
-		margin-top: 20px;
-	}
+    .container {
+    	margin: 0 auto;
+    	max-width: $content-max-width;
+        padding: 5%;
+    }
 
-	a {
-		text-decoration: none;
-	}
+    .page-content {
+        text-align: center;
 
-	.container {
-		max-width: $content-max-width;
-		margin: 0 auto;
-		text-align: left;
-	}
+        h1,
+        h2,
+        h3,
+        h4 {
+            color: $brandPrimary;
+            text-transform: uppercase;
+        }
 
-	.btn {
-		background: $brandPrimary;
-		border-radius: 20px;
-		color: $white;
-		display: inline-block;
-		font-weight: 600;
-		padding: 12px 26px;
-		text-decoration: none;
-		text-transform: uppercase;
-		transition: all .3s ease-out;
+        h2 {
+            font-size: $h2-font-size;
+            font-weight: 600;
+            margin: 40px 0 20px 0;
+            line-height: $h2-line-height;
+        }
 
-		.fa {
-			margin-left: 5px;
-		}
+        p {
+            color: $textColor;
+            line-height: 30px;
+            margin-top: 20px;
+        }
 
-		&:hover {
-			background: $black;
-			color: $white;
-		}
+        a {
+            text-decoration: none;
+        }
 
-		&.black {
-			background: $black;
+        .container {
+            max-width: $content-max-width;
+            margin: 0 auto;
+            text-align: left;
+        }
 
-			.fa {
-				color: $brandPrimary;
-			}
+        .btn {
+            @extend %button;
+        }
+    }
 
-			&:hover {
-				background: $brandPrimary;
+    .hero {
+        background: url('../img/header-image.png');
+        background-size: cover;
+        background-position: center -160px;
+        color: $white;
+        height: 500px;
+        padding-top: 150px;
+        position: relative;
+        text-align: center;
+        width: 100%;
 
-				.fa {
-					color: $white;
-				}
-			}
-		}
-	}
+        @media only screen and (max-width: $md-breakpoint) {
+            padding-top: 120px;
+            background-position: center -80px;
+        }
+
+        @media only screen and (max-width: $lg-breakpoint) {
+            background-position: center -60px;
+        }
+
+        .hero-text {
+            p {
+                color: $white;
+                font-size: 3.3em;
+                line-height: 1em;
+                margin: 0;
+
+                span {
+                    font-weight: 800;
+                }
+            }
+        }
+
+        .btn {
+            margin-top: 50px;
+        }
+
+        .support-text {
+            align-items: center;
+            background: rgba(0, 0, 0, .5);
+            bottom: 0;
+            display: flex;
+            font-weight: 700;
+            height: 80px;
+            justify-content: center;
+            letter-spacing: 1px;
+            position: absolute;
+            width: 100%;
+
+            span {
+                border-right: 1px solid $brandPrimary;
+                margin-right: 10px;
+                padding-right: 10px;
+            }
+
+            .btn {
+                margin: 0 0 0 10px;
+            }
+        }
+    }
 }
