--- a/scss/site/_structure.scss
+++ b/scss/site/_structure.scss
@@ -100,7 +100,7 @@
     }
 
     .hero {
-        background: url('../img/header-image.png');
+        background: url('../img/header-image.png') no-repeat;
         background-size: cover;
         background-position: center -160px;
         color: $white;
