--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -60,6 +60,10 @@ header {
 		width: 100%;
 		z-index: 3;
 
+		.btn {
+			display: flex;
+		}
+
 		.logo {
 			width: 230px;
 
@@ -71,6 +75,7 @@ header {
 
 		@media only screen and (max-width: $md-breakpoint) {
 			justify-content: space-around;
+			padding: 20px 0;
 		}
 
 		>div {
@@ -93,7 +98,7 @@ header {
 			p {
 				color: $black;
 				font-size: 0.6em;
-				margin: 20px 0 0 -1px;
+				margin: 30px 0 0 -1px;
 			}
 		}
 
@@ -174,6 +179,7 @@ header {
             font-weight: 700;
             justify-content: flex-end;
             text-align: right;
+            width: 100%;
             z-index: 10;
 
             @media screen and (max-width: $xl-breakpoint) {
