--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -11,6 +11,7 @@ $h2-line-height: 40px;
 $black: black;
 $white: white;
 $brandPrimary: #5890b0; // Light Blue
+$btnHover: darken($brandPrimary, 10%);
 $textColor: #a6a6a6;
 $sponsorBg: #f2f2f2;
 
