--- a/scss/site/_structure.scss
+++ b/scss/site/_structure.scss
@@ -103,7 +103,7 @@
     }
 
     .hero {
-        background: url('../img/header-image.png') no-repeat;
+        background: url('../img/APFF_hero-img.png') no-repeat;
         background-size: cover;
         background-position: center -160px;
         color: $white;
