--- a/scss/site/_structure.scss
+++ b/scss/site/_structure.scss
@@ -127,6 +127,7 @@
                 color: $white;
                 font-size: 3.1em;
                 line-height: 1em;
+                text-shadow: 2px 2px 4px #000000;
                 margin: 0;
 
                  @media only screen and (max-width: $xl-breakpoint) {
